--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: justincatalana
 
 # Name of the container image.
-image: your-user/justincatalana
+image: justincatalana/justincatalana
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 5.78.93.1
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,13 +19,13 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: justincatalana.com
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: justincatalana
 
   # Always use an access token rather than real password when possible.
   password:
@@ -75,7 +75,10 @@ asset_path: /rails/public/assets
 
 # Configure the image builder.
 builder:
-  arch: amd64
+  arch:
+    - amd64
+    - arm64
+  remote: ssh://root@5.78.93.1
 
   # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
   # remote: ssh://docker@docker-builder-server
