--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -20,7 +20,8 @@ servers:
 proxy:
   ssl: true
   host: justincatalana.com
-
+  forward_headers: true
+  
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
